--- a/styles/style2.css
+++ b/styles/style2.css
@@ -64,11 +64,6 @@ li {
 }
 
 
-.wrapsearch {
-    position: absolute;
-    float: none;
-}
-
 .relative {
     position: relative;
 }
@@ -122,6 +117,21 @@ li {
 
 .verhaal p {
     max-width: 60%;
+}
+
+balk {
+    z-index: 8;
+    position: relative;
+    width: 100%;
+    height: 10px;
+    background: #ccc;
+}
+
+
+.scrollbalk {
+    height: 10px;
+    background: #003082;
+    width: 0%;
 }
 
 .comments {
