--- a/styles/style.css
+++ b/styles/style.css
@@ -14,58 +14,43 @@ nav {
     box-shadow: 0 0.125rem 0 0 rgba(7, 7, 33, .15);
     background: #ffc917;
     margin: 0;
+    padding: 0;
     overflow: hidden;
-    height: 4em;
     width: 100%;
-    z-index: 520;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+    z-index: 5;
+    border-bottom-left-radius: 1em;
+    border-bottom-right-radius: 1em;
     position: fixed;
 }
 
-ul {
-    display: flex;
+nav a {
+    font-size: 1.2em;
 }
 
-li:nth-child(2) {
-    justify-content: flex-end;
+ul {
+    padding: 0;
+    display: flex;
+    align-items: center;
 }
 
 li {
+    align-items: baseline;
     list-style: none;
+    margin: 0.8em;
+}
+
+li:nth-child(2) {
+    margin-left: auto;
+
+
 }
 
 .ns {
-    width: 3.25rem;
-    height: 1.25rem;
-    float: left;
-    display: block;
-    margin-top: 0px;
-}
-
-img.link3 {
-
-    height: 1.25em;
-    float: right;
-    justify-content: flex-end;
+    margin: 0;
+    width: 4rem;
+    height: 2rem;
 
 }
-
-img.link1 {
-    float: right;
-    height: 1.25em;
-    margin-left: 5px;
-
-}
-
-
-img.link2 {
-    display: flex;
-    height: 5em;
-
-}
-
-
 
 .banner img {
     width: 100%;
@@ -94,7 +79,21 @@ img.link2 {
 }
 
 
+.cls-1 {
+    fill: #fff;
+    stroke-miterlimit: 10;
+}
 
+.cls-1,
+.cls-2 {
+    stroke: #fff;
+}
+
+.cls-2 {
+    fill: none;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+}
 
 
 
@@ -104,22 +103,22 @@ img.link2 {
     position: fixed;
     display: block;
     box-sizing: border-box;
-    height: 50px;
-    width: 50px;
+    height: 4.5em;
+    width: 4.5em;
     border: none;
     background-color: #003082;
     border-radius: 0.6em;
-    bottom: 50px;
-    right: 30px;
-    margin-right: -30px;
+    bottom: 4.5em;
+    right: 4.5em;
+    margin-right: -3em;
     opacity: 0;
-    z-index: 500;
-    transition: opacity .3s ease, margin-right .5s ease-out;
+    z-index: 3;
+    transition: .3s ease, .5s ease-out;
 }
 
 .visible {
-    transition: opacity .3s ease, margin-right .5s ease-out;
-    margin-right: 0px;
+    transition: opacity .3s ease, .5s ease-out;
+    margin-right: 0;
     opacity: 1;
 }
 
@@ -127,19 +126,20 @@ img.link2 {
 .gototop::after {
     content: '';
     position: absolute;
-    height: 18px;
-    width: 2px;
+    height: 1.5em;
+    width: 0.5em;
+    border-radius: 7em;
     background-color: #fff;
-    top: 16px;
+    top: 1.5em;
 }
 
 .gototop::before {
-    left: 18px;
+    left: 1.125rem;
     transform: rotate(45deg);
 }
 
 .gototop::after {
-    right: 18px;
+    right: 1.125rem;
     transform: rotate(-45deg);
 }
 
@@ -149,11 +149,11 @@ img.link2 {
 
 .sort {
     align-items: flex-start;
-    margin-left: 10px;
+    margin-left: 0.625rem;
     cursor: pointer;
-    height: 40px;
+    height: 2.5rem;
     background-color: transparent;
-    border: 2px solid #ffc917;
+    border: 0.15em solid #ffc917;
     border-radius: 0.6em;
     font-size: 1em;
     padding: .5em 1em;
@@ -162,7 +162,7 @@ img.link2 {
 }
 
 .sort:hover {
-    box-shadow: 0 0 40px 40px #ffc917 inset;
+    box-shadow: 0 0 2.5rem 2.5rem #ffc917 inset;
     color: white;
 }
 
@@ -171,12 +171,12 @@ img.link2 {
 .search {
     position: absolute;
     right: 0;
-    margin-right: 15px;
+    margin-right: 0.9375rem;
     background: #003082;
-    height: 25px;
+    height: 1.5625rem;
     border-radius: 0.6em;
     padding: .5em 1em;
-    margin-bottom: 10px;
+    margin-bottom: 0.625rem;
 
 }
 
@@ -184,8 +184,8 @@ img.link2 {
 .zoekknop {
 
     position: absolute;
-    width: 20px;
-    height: 20px;
+    width: 1.25rem;
+    height: 1.25rem;
     z-index: 4;
 }
 
@@ -196,9 +196,9 @@ img.link2 {
 }
 
 .searchButton {
-    font-size: 16px;
+    font-size: 1rem;
     float: right;
-    width: 50px;
+    width: 3.125rem;
     height: 100%;
     border-radius: 0.2em;
     background: none;
@@ -214,10 +214,10 @@ img.link2 {
     background: none;
     padding: 0;
     color: white;
-    font-size: 16px;
+    font-size: 1rem;
     transition: 0.4s;
-    line-height: 30px;
-    width: 0px;
+    line-height: 1.875rem;
+    width: 0;
 
 }
 
@@ -228,8 +228,8 @@ img.link2 {
 
 .search:focus-within > .searchInput {
 
-    width: 180px;
-    padding: 0 6px;
+    width: 15rem;
+    padding: 0 0.6rem;
 }
 
 .container {
@@ -275,10 +275,10 @@ img.link2 {
     left: 85%;
     top: 5%;
     color: white;
-    font-size: 16px;
+    font-size: 1rem;
     border: none;
     cursor: pointer;
-    border-radius: 5px;
+    border-radius: 0.2rem;
 
 }
 
@@ -288,7 +288,7 @@ img.link2 {
     left: 85%;
     top: 5%;
     color: white;
-    font-size: 16px;
+    font-size: 1rem;
     border: none;
     cursor: pointer;
     border-radius: 5px;
@@ -303,9 +303,9 @@ img.link2 {
     border-spacing: 0;
     padding: 0.5em;
     margin: 0.8em;
-    border: solid white 2px;
+    border: solid white 0.4rem;
     background-color: white;
-    border-radius: 20px;
+    border-radius: 1rem;
     max-height: 50em;
     /* animation-name: schrijver;
     animation-duration: 4s;
@@ -323,24 +323,22 @@ img.link2 {
     transform: translate(-50%, -50%);
     background-color: #555;
     color: white;
-    font-size: 16px;
-    padding: 12px 24px;
+    font-size: 1rem;
+    padding: 0.75rem 1.5rem;
     border: none;
     cursor: pointer;
-    border-radius: 5px;
+    border-radius: 1rem;
 }
 
 .comments {
     position: relative;
-
     display: flex;
     justify-content: flex-end space-between;
     align-items: baseline;
 }
 
 .comments p {
-
-    margin: 5px;
+    margin: 0.3rem;
     font-style: italic;
     color: grey;
 }
@@ -351,7 +349,7 @@ img.link2 {
     height: 100%;
     width: 40%;
     background-color: transparent;
-    border: 2px solid #003082;
+    border: 0.15em solid #003082;
     border-radius: 0.6em;
     font-size: 1em;
     padding: .5em 1em;
@@ -366,7 +364,7 @@ a:visited {
 }
 
 .lezen:hover {
-    box-shadow: 0 0 40px 40px #003082 inset;
+    box-shadow: 0 0 2.5rem 2.5rem #003082 inset;
     color: white;
 }
 
@@ -377,7 +375,7 @@ aside {
     padding: 1em;
     margin: 0.8em;
     background-color: #003082;
-    border-radius: 20px;
+    border-radius: 1.25rem;
     grid-column: 1 / -1;
     color: white;
 }
@@ -398,13 +396,13 @@ footer {
     box-shadow: 0 0 0 0.125rem rgba(7, 7, 33, .15);
     background: #ffc917;
     margin: 0;
-    border-radius: 20px 20px 0 0;
+    border-radius: 1.25rem 1.25rem 0 0;
     padding: 1.1em;
     text-align: center;
 }
 
 footer p {
-    margin-top: 0px;
+    margin-top: 0;
 }
 
 h3 {
@@ -459,6 +457,33 @@ input[type=submit] {
 
 }
 
+.st0 {
+    fill: #253B7C;
+}
+
+.st1 {
+    fill: #56555D;
+}
+
+.st2 {
+    fill: #FFFFFF;
+}
+
+.st3 {
+    fill: #FFCB19;
+}
+
+.st4 {
+    fill: #E8E8EB;
+}
+
+.st5 {
+    fill: none;
+    stroke: #E8E8EB;
+    stroke-width: 0.25;
+    stroke-miterlimit: 10;
+}
+
 @media(min-width: 40em) {
     .container {
         grid-template-columns: 50% 50%;
@@ -482,14 +507,14 @@ input[type=submit] {
     }
 
     .search:hover > .searchInput {
-        width: 280px;
-        padding: 0 6px;
+        width: 15rem;
+        padding: 0 0.3rem;
     }
 
 
     .searchBox:hover > .searchInput {
-        width: 300px;
-        padding: 0 2px;
+        width: 15rem;
+        padding: 0 0.3rem;
     }
 
 
