--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,7 @@ nav {
     box-shadow: 0 0.125rem 0 0 rgba(7, 7, 33, .15);
     background: #ffc917;
     margin: 0;
+    max-height: 4em;
     padding: 0;
     overflow: hidden;
     width: 100%;
@@ -24,19 +25,20 @@ nav {
 }
 
 nav a {
-    font-size: 1.2em;
+    font-size: 1.1em;
 }
 
 ul {
     padding: 0;
     display: flex;
-    align-items: center;
+
 }
 
 li {
-    align-items: baseline;
+    font-style: bold;
     list-style: none;
     margin: 0.8em;
+    margin-top: 0;
 }
 
 li:nth-child(2) {
@@ -48,7 +50,6 @@ li:nth-child(2) {
 .ns {
     margin: 0;
     width: 4rem;
-    height: 2rem;
 
 }
 
