--- a/styles/style.css
+++ b/styles/style.css
@@ -2,22 +2,21 @@
 
 
 
+
 body {
     font-family: 'Open Sans', sans-serif;
     background-color: #e7e7e9;
     margin: 0;
+
 }
-
-
 
 nav {
     box-shadow: 0 0.125rem 0 0 rgba(7, 7, 33, .15);
     background: #ffc917;
     margin: 0;
     max-height: 4em;
-    padding: 0;
-    overflow: hidden;
     width: 100%;
+    padding: 0;
     z-index: 5;
     border-bottom-left-radius: 1em;
     border-bottom-right-radius: 1em;
@@ -53,28 +52,24 @@ li:nth-child(2) {
 
 }
 
-.banner img {
+header > img:nth-child(2) {
     width: 100%;
     margin-top: 3em;
-
-}
-
-.banner {
+    overflow: hidden;
     position: relative;
 
 
 }
 
-.title {
-    font-family: sans-serif;
-    font-size: 2em;
-    font-weight: bolder;
-    color: #003082;
+h1 {
+    text-align: center;
     position: absolute;
-    top: 36%;
+    top: 15%;
     left: 50%;
-    z-index: 500;
     transform: translate(-50%, -50%);
+    color: darkblue;
+    font-size: 3em;
+
 
 
 }
@@ -98,76 +93,47 @@ li:nth-child(2) {
 
 
 
-/* naar boven knop */
-.gototop {
-    cursor: pointer;
-    position: fixed;
-    display: block;
-    box-sizing: border-box;
-    height: 4.5em;
-    width: 4.5em;
-    border: none;
-    background-color: #003082;
-    border-radius: 0.6em;
-    bottom: 4.5em;
-    right: 4.5em;
-    margin-right: -3em;
-    opacity: 0;
-    z-index: 3;
-    transition: .3s ease, .5s ease-out;
-}
 
-.visible {
-    transition: opacity .3s ease, .5s ease-out;
-    margin-right: 0;
-    opacity: 1;
-}
 
-.gototop::before,
-.gototop::after {
-    content: '';
-    position: absolute;
-    height: 1.5em;
-    width: 0.5em;
-    border-radius: 7em;
-    background-color: #fff;
-    top: 1.5em;
-}
 
-.gototop::before {
-    left: 1.125rem;
-    transform: rotate(45deg);
-}
-
-.gototop::after {
-    right: 1.125rem;
-    transform: rotate(-45deg);
-}
-
-.sortcontainer {
+section {
     display: flex;
 }
 
-.sort {
-    align-items: flex-start;
-    margin-left: 0.625rem;
+section button {
     cursor: pointer;
     height: 2.5rem;
     background-color: transparent;
     border: 0.15em solid #ffc917;
     border-radius: 0.6em;
     font-size: 1em;
-    padding: .5em 1em;
+    padding: .5em;
     transition-duration: .5s;
     text-align: center;
 }
 
-.sort:hover {
+
+section button:hover {
     box-shadow: 0 0 2.5rem 2.5rem #ffc917 inset;
     color: white;
 }
 
-/* search button css from https://codepen.io/omarsherifs/pen/KGLYYW but tweaked to touch on mobile and styled with my website's theme*/
+section button:focus {
+    box-shadow: 0 0 2.5rem 2.5rem #ffc917 inset;
+    cursor: pointer;
+    color: white;
+    outline: none;
+}
+
+section:nth-child(2) {
+    margin-left: 0.625rem;
+
+}
+
+
+
+
+
 
 .search {
     position: absolute;
@@ -182,8 +148,7 @@ li:nth-child(2) {
 }
 
 
-.zoekknop {
-
+section svg {
     position: absolute;
     width: 1.25rem;
     height: 1.25rem;
@@ -233,35 +198,159 @@ li:nth-child(2) {
     padding: 0 0.6rem;
 }
 
-.container {
-    margin-top: 3em;
+main {
     display: grid;
     justify-content: center;
 
 
 }
 
+section h2 {
+    display: none;
 
-
-/* animatie */
-
-@keyframes mymove {
-    from {
-        left: -500%;
-    }
-
-    to {
-        left: 200%;
-    }
 }
 
 
 
-.relative {
-    position: relative;
+
+main > form {
+    display: flex;
+    margin: 0.8em;
+    justify-content: center;
+    align-items: baseline;
+    box-shadow: 0 0.125rem 0 0 rgba(7, 7, 33, .15);
+    background-color: #ffc917;
+    border-radius: 1.25rem;
+    grid-column: 1 / -1;
+    color: black;
+    height: 0;
+    overflow: hidden;
+    transition: height 0.3s ease-in;
+
 }
 
-.preview {
+
+
+
+main > form button {
+    align-self: center;
+    float: right;
+    align-items: flex-start;
+    margin-left: 0.625rem;
+    cursor: pointer;
+    height: 2.5rem;
+    background-color: white;
+    border: 0.15em solid #003082;
+    border-radius: 0.6em;
+    font-size: 1em;
+    padding: .5em 1em;
+
+    text-align: center;
+}
+
+main > form button:hover {
+    cursor: pointer;
+    box-shadow: 0 0 2.5rem 2.5rem #003082 inset;
+    color: white;
+}
+
+main > form button:focus {
+    outline: none;
+}
+
+
+main > form fieldset {
+    border: none;
+}
+
+main > form legend {
+    font-weight: bold;
+    color: white;
+    font-size: 1.4rem;
+}
+
+
+
+
+main > form div:first-child {
+    margin: 0.8rem 0;
+    padding: 0;
+}
+
+main > form div:nth-child(2) {
+    margin: 0.1rem 0;
+}
+
+
+main > form.show {
+    margin: 0.8em;
+    height: 11em;
+
+
+}
+
+input[type="checkbox"] {
+    position: absolute !important;
+    top: -9999px !important;
+    left: -9999px !important;
+}
+
+
+label {
+    margin: 0.1em;
+}
+
+input[type="checkbox"] + label {
+    display: block;
+    font-weight: 100;
+    margin: auto;
+    border-bottom: 2px solid white;
+    color: white;
+    padding: 0 0.6rem 0.6rem 0;
+    cursor: pointer;
+}
+
+input[type="checkbox"]:checked + label {
+    color: #003082;
+    border-bottom-color: #003082;
+
+}
+
+
+
+aside {
+    z-index: 2;
+    box-shadow: 0 0.125rem 0 0 rgba(7, 7, 33, .15);
+    border-spacing: 0;
+    padding: 1em;
+    margin: 0.8em;
+    background-color: #003082;
+    border-radius: 1.25rem;
+    grid-column: 1 / -1;
+    color: white;
+}
+
+
+
+
+
+
+
+article {
+    box-shadow: 0 0.125rem 0 0 rgba(7, 7, 33, .15);
+    border-spacing: 0;
+    padding: 0.5em;
+    margin: 0.8em;
+    border: solid white 0.4rem;
+    background-color: white;
+    border-radius: 1rem;
+    min-height: 10em;
+    max-height: 40em;
+
+}
+
+article img {
+
     position: relative;
     display: block;
     margin-left: auto;
@@ -271,82 +360,22 @@ li:nth-child(2) {
     border-radius: 20px;
 }
 
-.previewr {
-    position: absolute;
-    left: 85%;
-    top: 5%;
-    color: white;
-    font-size: 1rem;
-    border: none;
-    cursor: pointer;
-    border-radius: 0.2rem;
 
-}
-
-#saved {
-    display: none;
-    position: absolute;
-    left: 85%;
-    top: 5%;
-    color: white;
-    font-size: 1rem;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-
-}
-
-
-
-.verhaal {
-
-    box-shadow: 0 0.125rem 0 0 rgba(7, 7, 33, .15);
-    border-spacing: 0;
-    padding: 0.5em;
-    margin: 0.8em;
-    border: solid white 0.4rem;
-    background-color: white;
-    border-radius: 1rem;
-    max-height: 50em;
-    /* animation-name: schrijver;
-    animation-duration: 4s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;*/
-
-}
-
-
-
-.verhaal .save {
-    position: relative;
-    top: 20px;
-    left: 85%;
-    transform: translate(-50%, -50%);
-    background-color: #555;
-    color: white;
-    font-size: 1rem;
-    padding: 0.75rem 1.5rem;
-    border: none;
-    cursor: pointer;
-    border-radius: 1rem;
-}
-
-.comments {
-    position: relative;
+article>div {
     display: flex;
-    justify-content: flex-end space-between;
-    align-items: baseline;
+    position: relative;
 }
 
-.comments p {
+article>div>p {
+    justify-content: flex-end;
     margin: 0.3rem;
     font-style: italic;
     color: grey;
 }
 
-.lezen {
+article a {
+    justify-content: flex-end;
     cursor: pointer;
-    margin-left: auto;
     height: 100%;
     width: 40%;
     background-color: transparent;
@@ -358,99 +387,149 @@ li:nth-child(2) {
     transition-duration: .5s;
     text-decoration: none;
     text-align: center;
-}
-
-a:visited {
     color: #003082;
+
+
 }
 
-.lezen:hover {
+
+
+article a:hover {
     box-shadow: 0 0 2.5rem 2.5rem #003082 inset;
     color: white;
 }
 
 
-aside {
-    box-shadow: 0 0.125rem 0 0 rgba(7, 7, 33, .15);
-    border-spacing: 0;
-    padding: 1em;
-    margin: 0.8em;
-    background-color: #003082;
-    border-radius: 1.25rem;
-    grid-column: 1 / -1;
-    color: white;
-}
 
-@keyframes schrijver {
-    from {
-        border-color: white;
-    }
 
-    to {
-        border-color: #ffc917;
-    }
-}
 
 
 
 footer {
+
+    overflow: hidden;
     box-shadow: 0 0 0 0.125rem rgba(7, 7, 33, .15);
     background: #ffc917;
     margin: 0;
     border-radius: 1.25rem 1.25rem 0 0;
     padding: 1.1em;
     text-align: center;
+
 }
 
 footer p {
     margin-top: 0;
 }
 
-h3 {
-    margin-top: 0;
+footer > form {
+
+    display: flex;
+    max-width: 20em;
+    border-radius: 5px;
 }
 
-.vragen {
-    grid-template-columns: 33%;
-    display: grid;
-    border-radius: 5px;
-    padding: 20px;
-}
 
 footer input[type=text],
+input[type=email],
 textarea {
-    width: 100%;
-    padding: 5px;
-    border: 2px solid #003082;
+    width: 20em;
+    height: 3em;
+    padding: 1em;
+    border: 0.6 solid #003082;
     border-radius: 6px;
     box-sizing: border-box;
-    resize: vertical;
-    display: inline-block;
-    position: relative;
+
 }
 
-label {
-    padding: 12px 10px 2px 0;
-    display: inline-block;
-    float: left;
+footer > form:invalid {
+    background: #003082;
+
 }
 
-input[type=submit] {
-    background-color: #003082;
-    color: white;
-    padding: 12px 20px;
-    margin: 1em;
+footer input[type=text]:focus,
+textarea:focus {
+    outline: none;
+}
+
+footer label {
+    display: block;
+}
+
+fieldset {
+
     border: none;
-    border-radius: 4px;
-    cursor: pointer;
+}
+
+input:valid,
+textarea:valid {
+    border: solid #003082 2px;
+
+}
+
+::placeholder {
+    color: lightgray;
+    font-style: italic;
 }
 
 
 
-.mytrain {
-    width: 50%;
-    position: absolute;
-    animation: mymove 8s infinite;
+input:invalid,
+textarea:invalid {
+    border: solid red 2px;
+}
+
+input:focus,
+textarea:focus {
+    outline: none;
+}
+
+footer input[type=submit] {
+    align-self: center;
+    cursor: pointer;
+    height: 2.5rem;
+    background-color: white;
+    border: 0.15em solid #003082;
+    border-radius: 0.6em;
+    font-size: 1em;
+    padding: .5em 1em;
+    transition-duration: .5s;
+
+
+
+}
+
+footer > input {
+    box-shadow: none;
+}
+
+footer input[type=submit]:focus {
+    outline: none;
+}
+
+footer input[type=submit]:hover {
+    cursor: pointer;
+    box-shadow: 0 0 2.5rem 2.5rem #003082 inset;
+    color: white;
+}
+
+/* animatie */
+
+@keyframes train {
+    from {
+        left: -100%;
+    }
+
+    to {
+        left: 100%;
+    }
+}
+
+footer svg {
+    overflow: hidden;
+    width: 70%;
+    height: 40%;
+    position: relative;
+    animation: train 3s infinite;
     animation-timing-function: linear;
     z-index: 4;
 
@@ -486,42 +565,73 @@ input[type=submit] {
 }
 
 @media(min-width: 40em) {
-    .container {
+    main {
         grid-template-columns: 50% 50%;
     }
 
-    .sort {
 
-        width: 10%;
+    main > form.show {
+        margin: 0.8em;
+        height: 6.5em;
+
+
+    }
+
+    footer svg {
+        width: 50%;
+        position: relative;
+        animation: train 8s infinite;
+        animation-timing-function: linear;
+        z-index: 4;
+    }
+
+    input[type="checkbox"] + label {
+        display: inline;
+
 
     }
 
 
 
-}
+    @media(min-width: 60em) {
+        main {
+            grid-template-columns: 30% 30% 30%;
 
-@media(min-width: 80em) {
-    .container {
-        grid-template-columns: 30% 30% 30%;
 
+        }
+
+
+
+        .search:hover > .searchInput {
+            width: 10rem;
+            padding: 0 0.3rem;
+        }
+
+
+        .searchBox:hover > .searchInput {
+            width: 10rem;
+            padding: 0 0.3rem;
+        }
+
+
+        .search:hover > .searchButton {
+            background: #ffc917;
+
+        }
+
+        footer label {
+            display: inline-flex;
+            align-items: baseline;
+        }
+
+        footer > form {
+            display: flex;
+        }
+
+        footer input,
+        textarea {
+            display: inline-flex;
+            align-items: baseline;
+        }
 
     }
-
-    .search:hover > .searchInput {
-        width: 15rem;
-        padding: 0 0.3rem;
-    }
-
-
-    .searchBox:hover > .searchInput {
-        width: 15rem;
-        padding: 0 0.3rem;
-    }
-
-
-    .search:hover > .searchButton {
-        background: #ffc917;
-
-    }
-
-}
