--- a/styles/style.css
+++ b/styles/style.css
@@ -348,7 +348,7 @@ article a {
     border-radius: 0.6em;
     font-size: 1em;
     padding: .5em 1em;
-    float: right;
+    margin-left: 7.5em;
     transition-duration: .5s;
     text-decoration: none;
     text-align: center;
