--- a/styles/style.css
+++ b/styles/style.css
@@ -274,7 +274,7 @@ input[type="checkbox"] + label {
     display: block;
     font-weight: 100;
     margin: auto;
-    border-bottom: 2px solid white;
+    border-bottom: 0.16em solid white;
     color: white;
     padding: 0 0.6rem 0.6rem 0;
     cursor: pointer;
@@ -321,7 +321,7 @@ article img {
     margin-right: auto;
     width: 100%;
     height: auto;
-    border-radius: 20px;
+    border-radius: 1.2em;
 }
 
 
@@ -388,7 +388,7 @@ footer > form {
 
     display: flex;
     max-width: 20em;
-    border-radius: 5px;
+    border-radius: 0.31em;
 }
 
 
@@ -399,7 +399,7 @@ textarea {
     height: 3em;
     padding: 1em;
     border: 0.6 solid #003082;
-    border-radius: 6px;
+    border-radius: 0.37em;
     box-sizing: border-box;
 
 }
@@ -425,7 +425,7 @@ fieldset {
 
 input:valid,
 textarea:valid {
-    border: solid #003082 2px;
+    border: solid #003082 0.3em;
 
 }
 
@@ -438,7 +438,7 @@ textarea:valid {
 
 input:invalid,
 textarea:invalid {
-    border: solid red 2px;
+    border: solid red 0.3em;
 }
 
 input:focus,
